# Blacksite

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Readme.md  imgui.ini
blacksite/: CMakeLists.txt
blacksite/include/blacksite/app/: Application.h
blacksite/include/blacksite/core/: CameraSystem.h  Engine.h  Entity.h  EntityHandle.h  EntityRegistry.h  EntitySystem.h  InputSystem.h  Logger.h
blacksite/include/blacksite/graphics/: PostProcessManager.h  RenderCommand.h  Renderer.h  ShaderManager.h  ShaderSystem.h
blacksite/include/blacksite/graphics/shaders/: CoreShaders.h  DebugShaders.h  PostProcessShaders.h  ShaderLibrary.h
blacksite/include/blacksite/math/: Transform.h
blacksite/include/blacksite/physics/: Collider.h  JoltConfig.h  PhysicsSystem.h
blacksite/include/blacksite/scene/: Scene.h  SceneSystem.h
blacksite/src/: main.cpp
blacksite/src/app/: Applicatoin.cpp
blacksite/src/core/: CameraSystem.cpp  Engine.cpp  EntityHandle.cpp  EntityRegistry.cpp  EntitySystem.cpp  InputSystem.cpp  Logger.cpp
blacksite/src/graphics/: GeometryManager.cpp  PostProcessManager.cpp  Renderer.cpp  ShaderManager.cpp  ShaderSystem.cpp
blacksite/src/graphics/shaders/: CoreShaders.cpp  DebugShaders.cpp  PostProcessShaders.cpp  ShaderLibrary.cpp
blacksite/src/physics/: PhysicsSystem.cpp
blacksite/src/scene/: Scene.cpp  SceneSystem.cpp
docs/: API_Reference.md  Build_Guide.md  index.md
docs/api/: editor.md  engine-core.md  entity-system.md  overview.md  physics.md
docs/getting-started/: installation.md  quick-start.md  troubleshooting.md
editor/: CMakeLists.txt
editor/include/: Editor.h
editor/include/blacksite_editor/: EditorApplication.h
editor/include/blacksite_editor/core/: EditorCore.h
editor/include/blacksite_editor/panels/: AssetBrowserPanel.h  ConsolePanel.h  InspectorPanel.h  PerformancePanel.h  SceneHierarchyPanel.h  ViewportPanel.h
editor/src/: Editor.cpp  EditorApplication.cpp  main.cpp
editor/src/core/: EditorCore.cpp
editor/src/panels/: AssetBrowserPanel.cpp  ConsolePanel.cpp  InspectorPanel.cpp  PerformancePanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp
editor/test/: main.cpp  test.cpp
include/blacksite/: Blacksite.h  blacksite.h
include/blacksite/core/: CameraSystem.h  Engine.h  Entity.h  EntityHandle.h  engine.h  window.h
include/blacksite/graphics/: Camera.h  GeometryManager.h  Renderer.h  renderer.h
include/blacksite/physics/: PhysicsSystem.h
include/blacksite/ui/: UI.h
include/blacksite/ui/panels/: ScenePanel.h
scripts/: README.md  build.sh  dev.sh  setup.sh
src/: debug_main.cpp  main.cpp  minimal_main.cpp  test_logger.cpp
src/core/: CameraSystem.cpp  Engine.cpp  Window.cpp  engine.cpp  window.cpp
src/graphics/: Camera.cpp  GeometryManager.cpp  Renderer.cpp  ShaderManager.cpp  renderer.cpp
src/physics/: PhysicsSystem.cpp
src/ui/: UI.cpp
src/ui/panels/: ScenePanel.cpp
